# Registro_Attivita_Grafica

./: Attivita.cpp  Attivita.h  CMakeLists.txt  InterfacciaQt.cpp  InterfacciaQt.h  Registro.cpp  Registro.h  main.cpp
test/: CMakeLists.txt  registro_test.cpp  runAllTests.cpp
